# aprsd-admin-extension

./: Makefile  README.md  README.rst  setup.cfg
aprsd_admin_extension/: __init__.py  extension.py  wsgi.py
aprsd_admin_extension/cmds/: __init__.py  admin.py  web.py
aprsd_admin_extension/conf/: __init__.py  main.py
