[metadata]
name = aprsd-admin-extension
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Walter A. Boring IV
author_email = waboring@hemna.com
license_file = LICENSE
classifier =
    Topic :: Communications :: Ham Radio
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
description_file =
    README.rst
summary = APRSD Admin Extension

[global]
setup-hooks =
    pbr.hooks.setup_hook

[options]
include_package_data = True
packages=find:

[files]
packages =
    aprsd_admin_extension

[entry_points]
aprsd.extension =
    admin = aprsd_admin_extension.extension
oslo.config.opts =
    aprsd_admin_extension.conf = aprsd_admin_extension.conf.opts:list_opts


[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_sphinx]
build-dir = docs/_build

[mypy]
ignore_missing_imports = True
strict = True

[bdist_wheel]
universal = 1
